[package]
name = "africa_capitals_game"
version = "1.2.3"
edition = "2021"
categories = [ "command-line-utilities", "games" ]
keywords = [ "capital", "africa" ]
authors = [ "software9119.technology" ]
license = "MIT"
description = "Guessing game for learning African capital cities."
repository = "https://github.com/deep-outcome/africa_capitals_game"
exclude = ["/pre"]

[dependencies]
noiserand = "1.0.0"
rand_core = "0.6.4"
rand = { version = "0.9.2", features = ["thread_rng"] }
